<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/categories"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/orders"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/fav"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/profile"
        android:title="@string/title_account" />

</menu>