<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.fragment.NoInternetFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_wifi"
        app:layout_constraintBottom_toTopOf="@+id/noInterNet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noInterNet"
        android:text="@string/no_internet"
        android:textStyle="bold"
        android:fontFamily="@font/arabic_medium"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:text="@string/internet_check"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/arabic_regular"
        app:layout_constraintEnd_toEndOf="@+id/noInterNet"
        app:layout_constraintStart_toStartOf="@+id/noInterNet"
        app:layout_constraintTop_toBottomOf="@+id/noInterNet" />

    <com.google.android.material.button.MaterialButton
        android:text="@string/try_again"
        app:cornerRadius="20dp"
        android:layout_width="0dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/arabic_regular"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>