<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.LoginFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/arabic_regular"
            android:text="@string/enter_your_phone"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/emailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone"
            android:layout_marginTop="50dp"
            app:endIconDrawable="@drawable/num_egpt"
            app:startIconTint="@color/gray"
            app:startIconDrawable="@drawable/num_egpt"
            app:startIconTintMode="multiply"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:fontFamily="@font/arabic_regular"
            android:textColor="@color/darkGray"
            android:text="@string/enter_your_password"
            app:layout_constraintBottom_toTopOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"

            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:passwordToggleEnabled="true"

            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:text="@string/registered"
            android:fontFamily="@font/arabic_medium"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgetPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgetPassword"
            android:text="@string/forgetPassword"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/arabic_medium"

            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/arabic_regular"

            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/divider2"
            app:layout_constraintBottom_toBottomOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:background="@color/darkGray"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@id/tvOr"
            app:layout_constraintBottom_toTopOf="@id/facebookLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />
        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/darkGray"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvOr"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray"
            android:text="@string/facebook"
            android:fontFamily="@font/arabic_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:icon="@drawable/facebook"
            app:iconGravity="end"
            app:iconTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOr"
            app:layout_constraintWidth_percent=".45" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@color/gray"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:fontFamily="@font/arabic_medium"

            app:icon="@drawable/google"
            app:iconGravity="end"
            app:iconTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintTop_toBottomOf="@id/tvOr"
            app:layout_constraintWidth_percent=".45" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>